--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,6 @@ jobs:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       - name: Run Prisma seed
-        run: npx prisma db seed
+        run: yarn seed
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
