--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cosmere-api",
   "version": "1.0.0",
   "scripts": {
+    "postinstall": "prisma generate",
     "dev": "ts-node-dev --respawn --transpile-only api/serverless.ts",
     "build": "tsc",
     "start": "node dist/server.js",
