--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
-    "@fastify/rate-limit": "^10.3.0",
     "@prisma/client": "^6.0.0",
+    "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.3",
     "fastify": "^5.5.0",
     "fastify-plugin": "^5.0.1",
